--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -1,8 +1,7 @@
 {
-  "image_name": "cyberdojofoundation/gpp_cucumber_gtest",
+  "image_name": "cyberdojofoundation/gpp_cucumber_gtest:4c7f578",
   "display_name": "C++ (g++), Cucumber-cpp",
-  "visible_filenames":
-  [
+  "visible_filenames": [
     "features/hiker.feature",
     "features/step_definitions/cucumber.wire",
     "features/step_definitions/hiker_steps.cpp",
@@ -11,15 +10,13 @@
     "hiker.hpp",
     "hiker.cpp"
   ],
-  "highlight_filenames":
-  [
+  "highlight_filenames": [
     "features/hiker.feature",
     "features/step_definitions/hiker_steps.cpp",
     "hiker.hpp",
     "hiker.cpp"
   ],
-  "filename_extension":
-  [
+  "filename_extension": [
     ".cpp",
     ".hpp",
     ".feature",
